# stereo_slam

./: CMakeLists.txt  ReadMe.md  package.xml
config/: default.yaml
include/stereo_slam/: algorithm.hpp  backend.hpp  camera.hpp  common.hpp  config.hpp  dataset.hpp  feature.hpp  frame.hpp  frontend.hpp  g2o_types.hpp  map.hpp  mappoint.hpp  slam_node.hpp  viewer.hpp  visual_odometry.hpp
launch/: stereo_slam_launch.py
params/: camera.yaml
rviz/: stereo_slam.rviz
src/: backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  run_slam.cpp  slam_node.cpp  viewer.cpp  visual_odometry.cpp
test/: test_algorithm.cpp  test_backend.cpp  test_camera.cpp  test_dataset.cpp  test_frame.cpp  test_map.cpp  test_map_point.cpp  test_viewer.cpp
